--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-xgboost
-sklearn
-pandas
+from sklearn.linear_model import LinearRegression, Lasso, Ridge
+import streamlit as st
+import pandas as pd
